--- a/style.css
+++ b/style.css
@@ -10,14 +10,35 @@ h1 , h2 , h4 , p{
 .nav{
     display: flex;
     justify-content: space-between;
-    margin: 15px 50px;
+    /* margin: 15px 50px; */
+    margin: 0 auto;
 
 }
+
+nav{
+    box-shadow: 5px 5px 5px rgba(1, 1, 1, 0.05);
+    position: sticky;
+    top: 0;
+    background:white;
+    margin-bottom: 32px;
+}
+
+.nav .logo-img{
+    padding-left: 40px;
+}
+
+
 
 .nav .menu-img{
     height: 30px;
     margin-top: 30px;
+    padding-right: 40px;
 }
+
+.nav .menu-img:hover{
+    cursor: pointer;
+}
+
 
 .hero-section{
     display: flex;
@@ -47,6 +68,7 @@ h1 , h2 , h4 , p{
     padding: 10px;
     font-size: 20px;
     border: 2px solid black;
+    border-radius: 4px;
     background-color: green;
 }
 
@@ -68,8 +90,12 @@ h1 , h2 , h4 , p{
 .hero-content .explore-button{
     padding-top: 10px;
     padding-left: 10px;
-    
+
 }
+
+
+
+
 
 .explore-button p{
     display: inline;
@@ -77,17 +103,34 @@ h1 , h2 , h4 , p{
     font-size: 20px;
     border: 2px solid black;
     background-color: orange;
+    transition:  0.3s ease-in;
+    border-radius: 4px;
+}
+
+.explore-button p:hover{
+    background-color: rgb(248, 109, 74);
+    transition:  0.3s ease-out;
+    cursor: pointer;
 }
 
 .hero-bottom{
     display: flex;
-    width: 900px;
-    margin: 30px auto;
+    justify-content: center;
+    margin: 35px auto;
 }
 
 .hero-bottom .voucher{
     display: flex;
+    margin: 10px;
+    transition:  0.3s ease-in;
 }
+
+.hero-bottom .voucher:hover{
+    box-shadow: 4px 3px 5px rgba(1, 1, 1, 0.5);
+
+    transition:  0.3s ease-out;
+}
+
 
 .hero-bottom .voucher h2{
     font-size: 20px ;
@@ -102,7 +145,15 @@ h1 , h2 , h4 , p{
 
 .hero-bottom .fresh{
     display: flex;
+    margin: 10px;
+    transition:  0.3s ease-in;
 }
+
+.hero-bottom .fresh:hover{
+    box-shadow: 4px 3px 5px rgba(1, 1, 1, 0.5);
+    transition:  0.3s ease-out;
+}
+
 
 .hero-bottom .fresh h2{
     font-size: 20px ;
@@ -117,8 +168,16 @@ h1 , h2 , h4 , p{
 
 .hero-bottom .delivery{
     display: flex;
-    margin-bottom: 20px;
+    margin: 10px;
+    transition:  0.3s ease-in;
 }
+
+.hero-bottom .delivery:hover{
+    box-shadow: 4px 3px 5px rgba(1, 1, 1, 0.5);
+    transition:  0.3s ease-out;
+
+}
+
 
 .hero-bottom .delivery h2{
     font-size: 20px ;
@@ -179,39 +238,96 @@ h1 , h2 , h4 , p{
     grid-column: span 2;
     width: 410px;
     height: 400px;
+    transition: 0.3s ease-in;
+}
+
+.item1:hover{
+    transform: scale(1.02);
+    box-shadow: 5px 3px 4px rgba(1, 1, 1, 0.5);
+    transition: 0.3s ease-out;
 }
 
 .item2{
     width: 200px;
     height: 400px;
+    transition: 0.3s ease-in;
+
 }
+.item2:hover{
+    transform: scale(1.02);
+    box-shadow: 5px 3px 4px rgba(1, 1, 1, 0.5);
+    transition: 0.3s ease-out;
+}
+
 
 .item3{
 
     height: 200px;
+    transition: 0.3s ease-in;
+
 }
+
+.item3:hover{
+    transform: scale(1.02);
+    box-shadow: 5px 3px 4px rgba(1, 1, 1, 0.5);
+    transition: 0.3s ease-out;
+}
+
 
 .item4{
 
     height: 200px;
+    transition: 0.3s ease-in;
+
 }
+
+.item4:hover{
+    transform: scale(1.02);
+    box-shadow: 5px 3px 4px rgba(1, 1, 1, 0.5);
+    transition: 0.3s ease-out;
+}
+
 
 .item5{
 
     height: 200px;
+    transition: 0.3s ease-in;
+
 }
+.item5:hover{
+    transform: scale(1.02);
+    box-shadow: 5px 3px 4px rgba(1, 1, 1, 0.5);
+    transition: 0.3s ease-out;
+}
+
 
 
 .item6{
 
     height: 200px;
+    transition: 0.3s ease-in;
+
 }
+.item6:hover{
+    transform: scale(1.02);
+    box-shadow: 5px 3px 4px rgba(1, 1, 1, 0.5);
+    transition: 0.3s ease-out;
+}
+
 
 .item7{
     width: 200px;
     height: 400px;
     transform: translateY(-200px);
+    transition: 0.3s ease-in;
 }
+/* .item7:hover{
+    transform: translateY(-200px);
+    transform: scale(1.02);
+    box-shadow: 5px 3px 4px rgba(1, 1, 1, 0.5);
+    transition: 0.3s ease-out;
+} */
+
 
 
 
